--- a/animais-fantasticos/style.css
+++ b/animais-fantasticos/style.css
@@ -73,7 +73,7 @@ img {
   text-transform: uppercase;
   color: #222;
   display: block;
-  padding: 10px;
+  padding: 15px 10px;
   margin-right: 10px;
   font-weight: bold;
   font-size: 0.875rem;
