--- a/animais-fantasticos/style.css
+++ b/animais-fantasticos/style.css
@@ -88,6 +88,30 @@ img {
   grid-column: 2;
 }
 
+.animais-lista img {
+  cursor: pointer;
+}
+
+.js .js-tabcontent section {
+  display: none;
+}
+
+.js .js-tabcontent section.ativo {
+  display: block;
+  animation: tabnav 0.5s;
+}
+
+@keyframes tabnav {
+  from {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
 .animais-lista::-webkit-scrollbar {
   width: 18px;
 }
