--- a/le-scone_sass/css/scss/style.scss
+++ b/le-scone_sass/css/scss/style.scss
@@ -1,1 +1,5 @@
-@import "reset";
+@import url("https://fonts.googleapis.com/css2?family=Aref+Ruqaa&family=PT+Mono&display=swap");
+@import "__reset";
+@import "__util";
+@import "__geral";
+@import "__home";
