--- a/le-scone_sass/css/scss/__util.scss
+++ b/le-scone_sass/css/scss/__util.scss
@@ -36,3 +36,9 @@ $s-device: 480px;
   font-size: 1.1rem;
   line-height: 1.8rem;
 }
+
+@mixin secondary-text {
+  font-family: "Aref Ruqaa", serif;
+  font-size: 1.1rem;
+  line-height: 1.8rem;
+}
