--- a/le-scone_sass/css/scss/__geral.scss
+++ b/le-scone_sass/css/scss/__geral.scss
@@ -15,6 +15,9 @@ p {
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
   margin: 0 auto;
   max-width: $l-device;
   @include device(m) {
