--- a/le-scone_sass/css/style.css
+++ b/le-scone_sass/css/style.css
@@ -416,4 +416,23 @@ label {
   }
 }
 
+.footer {
+  background-color: #2a2426;
+  display: flex;
+  padding: 20px;
+  margin-top: 120px;
+  box-shadow: 0 0 0 10px #2a2426;
+  justify-content: space-evenly;
+}
+.footer p {
+  color: #edece4;
+}
+@media screen and (min-width: 480px) and (max-width: 759px) {
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
