refactor: add datasets
Adicionar datasets para as funcionalidades javascript

--- a/animais-fantasticos_javascript/style.css
+++ b/animais-fantasticos_javascript/style.css
@@ -93,11 +93,11 @@ img {
   cursor: pointer;
 }
 
-.js .js-tabcontent section {
+.js [data-tab="content"] section {
   display: none;
 }
 
-.js .js-tabcontent section.ativo {
+.js [data-tab="content"] section.ativo[data-anime="show-right"] {
   display: block;
   animation: tabnav 0.5s;
 }
@@ -189,26 +189,26 @@ img {
 }
 
 /* ACCORDION LIST */
-.js .js-accordion dd {
+.js [data-anime="accordion"] dd {
   display: none;
   animation: accordion-close 0.5s;
 }
 
-.js .js-accordion dt {
+.js [data-anime="accordion"] dt {
   cursor: pointer;
 }
 
-.js .js-accordion dt::after {
+.js [data-anime="accordion"] dt::after {
   content: "↴";
   margin-left: 10px;
 }
 
-.js .js-accordion dt.ativo::after {
+.js [data-anime="accordion"] dt.ativo::after {
   display: inline-block;
   animation: accordion-arrow 0.5s forwards;
 }
 
-.js .js-accordion dd.ativo {
+.js [data-anime="accordion"] dd.ativo {
   display: block;
   animation: accordion-open 0.5s;
 }
@@ -216,12 +216,10 @@ img {
 @keyframes accordion-open {
   from {
     opacity: 0;
-    /* transform: translate3d(0, -30px, 0); */
     max-height: 0px;
   }
   to {
     opacity: 1;
-    /* transform: translate3d(0, 0, 0); */
     max-height: 200px;
   }
 }
@@ -273,13 +271,13 @@ img {
 }
 
 /*  */
-.js .js-scroll {
+.js [data-anime="scroll"] {
   opacity: 0;
   transform: translate3d(-30px, 0, 0);
   transition: 0.3s;
 }
 
-.js .js-scroll.ativo {
+.js [data-anime="scroll"].ativo {
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
